--- a/package.json
+++ b/package.json
@@ -1,29 +1,20 @@
 {
-  "name": "lcache",
-  "version": "0.0.1",
-  "description": "The LCache is a node based restfulapi cache",
+  "name": "restful-api",
+  "version": "1.0.0",
+  "description": "LCache - Leveldb cache mechanism",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://git.com/Hndl/lcache"
+	"prestart": "npm install",
+	"start": "node index.js"
   },
   "keywords": [
-    "lcache",
-    "leveldb",
-    "levelup",
-    "leveldown",
-    "restful",
-    "api",
-    "get",
-    "put",
-    "delete"
+    "swagger"
   ],
-  "author": "cbg",
-  "license": "MIT",
+  "license": "Unlicense",
+  "private": true,
   "dependencies": {
-    "levelup": "^4.0.1"
+    "connect": "^3.2.0",
+    "js-yaml": "^3.3.0",
+    "swagger-tools": "0.10.1"
   }
 }
