--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The LCache is a node based restfulapi cache",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm index.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,6 @@
   "author": "cbg",
   "license": "MIT",
   "dependencies": {
-    "levelup": "^4.0.1"
+    "level": "^5.0.1"
   }
 }
