--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "author": "cbg",
   "license": "MIT",
   "dependencies": {
-    "level": "^5.0.1"
+    "level": "^5.0.1",
+     "express": "^4.17.0"
   }
 }
