--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
 
 orbs:
   heroku: circleci/heroku@0.0.8
-  docker: circleci/docker@x.y.z
+  docker: circleci/docker@0.5.0
 
 workflows:
   build-docker-image-only:
