--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,14 @@
 version: 2.1
 
+
 jobs:
   check-and-build-only:
-    executor: docker-publish/machine
     steps:
       - checkout
       - docker/check
       - docker/build:
+          deploy : false
           image: $CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME
-
 
 orbs:
   heroku: circleci/heroku@0.0.8
@@ -18,6 +18,7 @@ workflows:
   build-docker-image-only:
     jobs:
       - check-and-build-only
+      
   heroku_deploy:
     jobs:
       - heroku/deploy-via-git
